--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "@fastly/js-compute": "^0.2.1"
+    "@fastly/js-compute": "^0.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "prebuild": "webpack",
     "build": "js-compute-runtime --skip-pkg bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy"
+  },
+  "volta": {
+    "node": "16.13.1"
   }
 }
