--- a/fastly.toml
+++ b/fastly.toml
@@ -5,5 +5,5 @@ authors = ["jason.chambers@hey.com"]
 description = "A basic starter kit that demonstrates routing, simple synthetic responses and overriding caching rules."
 language = "javascript"
 manifest_version = 2
-name = "fastly-react-compute-edge"
+name = "fastly-compute"
 service_id = ""
