--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
   "name": "compute-starter-kit-javascript-default",
   "version": "0.2.0",
-  "main": "src/index.js",
+  "homepage": "https://developer.fastly.com/solutions/starters/compute-starter-kit-javascript-default",
+  "bugs": {
+    "url": "https://github.com/fastly/compute-starter-kit-js-proto/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fastly/compute-starter-kit-js-proto.git"
   },
-  "author": "oss@fastly.com",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fastly/compute-starter-kit-js-proto/issues"
-  },
-  "homepage": "https://developer.fastly.com/solutions/starters/compute-starter-kit-javascript-default",
-  "engines": {
-    "node": "^16"
-  },
-  "devDependencies": {
-    "core-js": "^3.19.1",
-    "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1"
-  },
-  "dependencies": {
-    "@fastly/js-compute": "^0.2.1"
-  },
+  "author": "oss@fastly.com",
+  "main": "src/index.js",
   "scripts": {
     "prebuild": "webpack",
     "build": "js-compute-runtime --skip-pkg bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy"
+  },
+  "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@fastly/js-compute": "^0.2.1",
+    "babel-loader": "^8.2.3",
+    "core-js": "^3.19.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1"
+  },
+  "engines": {
+    "node": "^16"
   }
 }
