--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@fastly/js-compute": "^0.2.1",
     "babel-loader": "^8.2.3",
     "core-js": "^3.19.1",
