--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "core-js": "^3.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "regenerator-runtime": "^0.13.9",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
