--- a/marketing/package.json
+++ b/marketing/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "prebuild": "webpack",
     "build": "js-compute-runtime --skip-pkg bin/index.js bin/main.wasm",
-    "deploy": "npm run build && fastly compute deploy"
+    "deploy": "npm run build && fastly compute deploy",
+    "check-types": "tsc"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
