--- a/web/package.json
+++ b/web/package.json
@@ -42,9 +42,15 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.0",
+    "css-loader": "^6.5.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss-loader": "^6.2.1",
     "prettier": "^2.5.0",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
   },
