--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "author": "oss@fastly.com",
   "main": "src/index.js",
   "scripts": {
+    "build-client": "tsc & webpack --config webpack.client.config.js",
     "prebuild": "tsc & webpack",
     "build": "js-compute-runtime --skip-pkg bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy",
