--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,10 @@
   "author": "oss@fastly.com",
   "main": "src/index.js",
   "scripts": {
-    "build-client": "tsc & webpack --config webpack.client.config.js",
-    "prebuild": "tsc & webpack",
+    "webpack": "webpack --config webpack.client.config.js && webpack --config webpack.server.config.js",
     "build": "js-compute-runtime --skip-pkg bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy",
-    "check-types": "tsc"
+    "type-check": "tsc"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -44,6 +43,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "html-loader": "^3.0.1",
