--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "regenerator-runtime": "^0.13.9",
+    "uikit": "^3.9.4",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
   },
