--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,14 @@
     "webpack": "webpack --config webpack.client.config.js && webpack --config webpack.server.config.js",
     "build": "js-compute-runtime bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "vite-dev": "node vite/server.js",
+    "vite-build": "npm run build:client && npm run build:server",
+    "vite-build:client": "vite build --outDir dist/client",
+    "vite-build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
+    "vite-generate": "vite build --outDir dist/static && npm run build:server && node prerender",
+    "vite-serve": "cross-env NODE_ENV=production node server",
+    "vitedebug": "node --inspect-brk server"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -13,12 +20,14 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@fastly/js-compute": "^0.2.1",
+    "@vitejs/plugin-react": "^1.0.0",
     "babel-loader": "^8.2.3",
     "core-js": "^3.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
+    "vite": "^2.6.4",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
   },
@@ -31,6 +40,7 @@
     "autoprefixer": "^10.4.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "express": "^4.17.1",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
