--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
     "build": "js-compute-runtime bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy",
     "type-check": "tsc",
-    "vite-dev": "node vite/server.ts",
+    "vite-dev": "node vite/server.js",
     "vite-build": "npm run build:client && npm run build:server",
     "vite-build:client": "vite build --outDir dist/client",
     "vite-build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
@@ -35,7 +35,6 @@
     "node": "^16"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
