--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "klaw-sync": "^6.0.0",
     "lint-staged": "^12.1.2",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
