--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
     "build": "js-compute-runtime bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy",
     "type-check": "tsc",
-    "vite-dev": "node vite/server.js",
+    "vite-dev": "babel-node --presets @babel/preset-typescript,@babel/preset-env --extensions '.ts' vite/server.ts",
     "vite-build": "npm run build:client && npm run build:server",
     "vite-build:client": "vite build --outDir dist/client",
     "vite-build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
@@ -35,9 +35,12 @@
     "node": "^16"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
+    "babel-node": "^0.0.1-security",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "express": "^4.17.1",
@@ -47,6 +50,7 @@
     "klaw-sync": "^6.0.0",
     "lint-staged": "^12.1.2",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-fetch": "^3.1.0",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.5.0",
     "sass": "^1.44.0",
