--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.1.0",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "express": "^4.17.1",
